--- a/report/report.tex
+++ b/report/report.tex
@@ -22,26 +22,30 @@ Adam Krupička, Matej Troják
 V našom projekte sme chceli riešiť problém pohybu šachových figúrok po šachovnici. Napadlo nás niekoľko prístupov, ako tento problém riešiť:
 
 \begin{enumerate}
-\item dať sieti na vstup celú šachovnicu a na výstupe očakávať opäť šachovni-cu, avšak pozmenenú o jeden validný ťah,
+\item dať sieti na vstup celú šachovnicu a na výstupe očakávať opäť šacho-vnicu, avšak pozmenenú o jeden validný ťah,
 \item dať sieti na vstup pozície jednotlivých figúrok a na výstupe očakávať pozmenené pozície figúrok,
-\item dať sieti na vstup celú šachovnicu/pozície figúrok a očakávať na výstupe ťah, ktorý sa má vykonať, t.j. súradnice políčka s \textit{nejakou} figúrkou a súradnice, kam sa má posunúť,
-\item dať sieti na vstup dve šachovnice a sieť odpovie hodnotou medzi 0 a 1 ako \textit{dobrý} je ťah (inšpirované iným zdrojom, neriešené)
+\item dať sieti na vstup celú šachovnicu/pozície figúrok a očakávať na~výstu-pe ťah, ktorý sa má vykonať, t.j. súradnice políčka s \textit{nejakou} figúrkou a súradnice, kam sa má posunúť,
+\item dať sieti na vstup dve šachovnice a sieť odpovie hodnotou medzi 0~a~1 ako \textit{dobrý} je ťah (inšpirované iným zdrojom, neriešené)
 \end{enumerate}
 
 {\centering\textbf{Zdroj dát}\\}
 
-Použili sme záznamy šachových partií z Games of World Champions\footnotemark[1]\footnotetext[1]{\url{http://www.chess.com/download/view/games-of-world-champions}}. Na dáta sme využili voľne dostupný parser, ktorý ich prekonvertoval do formátu FEN (Forsyth–Edwards Notation), čo je štandartná notácia pre popis priebehu šachovej partie tak, aby mohla byť opätovne zrekonštruo-vaná. \\
+Použili sme záznamy šachových partií z Games of World Champions\footnotemark[1]\footnotetext[1]{\url{http://www.chess.com/download/view/games-of-world-champions}}. Na dáta sme využili voľne dostupný parser, ktorý ich prekonvertoval do~for-mátu FEN (Forsyth–Edwards Notation), čo je štandardná notácia pre popis priebehu šachovej partie tak, aby mohla byť opätovne zrekonštruo-vaná. \\
 
 {\centering\textbf{Implementácia}\\}
 
 Implementovali sme viacvrstvú sieť (multilayer perceptron) a spätnú propagáciu (backpropagation algorithm) v jazyku C++. Implementovali sme triedy pre neurón, sieť a šachovnicu. Urobili sme serializáciu siete tak, aby sme po ukončení učenia s ňou mohli znova pracovať aj s odstupom času. Celý program má 3 rôzne funkcie:
 
 \begin{itemize}
-\item \textbf{new} - vytvorenie novej siete, parameter je \textit{"počet neurónov vo vrstvách"} a názov siete
+\item \textbf{new} - vytvorenie novej siete, parameter je \textit{"počet neurónov vo vrstvách"}
+
+\hspace{1cm} a názov siete
 
 {\centering\small ./main~new~`3~81~2'~my.net\\}
 
-\item \textbf{learn} - spustí učenie pomocou spätnej propagácie nad daným vstupným súborom dát a sieťou
+\item \textbf{learn} - spustí učenie pomocou spätnej propagácie nad daným vstup-
+
+\hspace{1.3cm}ným súborom dát a sieťou
 
 {\centering\small ./main learn input.txt my.net \\}
 
@@ -53,7 +57,7 @@ Implementovali sme viacvrstvú sieť (multilayer perceptron) a spätnú propagá
 
 \mysmallsection{Prístup 1}
 
-Vstup tvorený FENmi sme jednoduchým scriptom previedli do sekvencie 64 číslic v rozsahu hodnôt [-6, 6]. Figúrky majú nasledujúcu číselnú reprezentáciu (jedná sa o biele figúrky, čierne majú opačné znamienko):
+Vstup tvorený FENmi sme jednoduchým skriptom previedli do sekvencie 64 číslic v rozsahu hodnôt [-6, 6]. Figúrky majú nasledujúcu číselnú reprezentáciu (jedná sa o biele figúrky, čierne majú opačné znamienko):
 
 \begin{center}
 {\small
@@ -69,21 +73,21 @@ Vstup tvorený FENmi sme jednoduchým scriptom previedli do sekvencie 64 čísli
 
 prázdne políčko má hodnotu 0.
 
-{\centering\textbf{Riešenie}\\}
+{\vspace*{0.5cm}\centering\textbf{Riešenie}\\}
 
-Nakoľko sme potrebovali rozsah hodnôt [-6, 6], ako aktivačnú funkciu sme zvolili hyperbolický tangens s upravenými koeficientami tak, aby bol na danom intervale približne lineárny. 
+Nakoľko sme potrebovali rozsah hodnôt [-6, 6], ako aktivačnú funkciu sme zvolili hyperbolický tangens s upravenými koeficientmi tak, aby bol na danom intervale približne lineárny. 
 
 \begin{equation}
 F_a(x)=12 \times tanh(\frac{x}{12})
 \end{equation}
 
-Trénovacie dáta boli dvojice sekvencií 64 číslic. Ťah je reprezentovaný tak, že na políčko, \textbf{z} ktorého sa figúrka hýbe, sa priradí číslo nula a políčko, \textbf{na} ktoré sa figúrka hýbe dostane pôvodnú hodnotu figúrky. Nakoľko v trénovacích dátach boli ťahy ako pre bieleho, tak i čierneho hráča, rozhodli sme sa používať iba biele ťahy. Tým sme dáta zmenšili o jeden rozmer (každý ťah čierneho hráča sa dá previesť na ťah bieleho hráča).
+Trénovacie dáta boli dvojice sekvencií 64 číslic. Ťah je reprezentovaný tak, že na políčko, \textbf{z} ktorého sa figúrka hýbe, sa priradí číslo nula a políčko, \textbf{na} ktoré sa figúrka hýbe dostane pôvodnú hodnotu figúrky. Nakoľko v~tré-novacích dátach boli ťahy ako pre bieleho, tak i čierneho hráča, rozhodli sme sa používať iba biele ťahy. Tým sme dáta zmenšili o jeden rozmer (každý ťah čierneho hráča sa dá previesť na ťah bieleho hráča).
 
 \newpage
 
 \mysmallsection{Prístup 2}
 
-Vstup tvorený FENmi sme iným scriptom previedli do sekvencie 64 číslic v rozsahu hodnôt [0, 8]. Čísla sú vnímané ako dvojice, kde každá dvojica predstavuje súradnice konkrétnej figúrky na šachovnici. Poradie figúrok je teda fixne dané. Ak sa figúrka na šachovnici nenachádza, dostane súradnice (0, 0).
+Vstup tvorený FENmi sme iným skriptom previedli do sekvencie 64 číslic v rozsahu hodnôt [0, 8]. Čísla sú vnímané ako dvojice, kde každá dvojica predstavuje súradnice konkrétnej figúrky na šachovnici. Poradie figúrok je teda fixne dané. Ak sa figúrka na šachovnici nenachádza, dostane súradnice (0, 0).
 
 {\vspace*{0.5cm}\centering\textbf{Riešenie}\\}
 
@@ -96,15 +100,15 @@ Pre potrebný rozsah hodnôt sme zvolili funkciu:
   \end{cases}
 \]
 
-Ťah je reprezentovaný zmenou súradníc jednej figúrky. V prípade, ak sa jedná o ťah, kedy nepriateľ stráca figúrku (t.j. figúrka sa presúva na súradnice už zahrnuté v sekvencii súradníc), súradnice vyhodenej figúrky sú (0, 0).
+Ťah je reprezentovaný zmenou súradníc jednej figúrky. V prípade, ak sa jedná o ťah, kedy nepriateľ stráca figúrku (t.j. figúrka sa presúva na~súrad-nice už zahrnuté v sekvencii súradníc), súradnice vyhodenej figúrky sú~(0,~0).
 
 \mysmallsection{Prístup 3}
 
-Tento prístup je veľmi podobný prístupu číslo 2, rozdiel je iba vo výstupe siete. Namiesto toho, aby bol ťah zahrnutý v rozložení novej šachovnice, je výstupom explicitne daný ťah, t.j. súradnice políčka, \textbf{z} ktorého sa má figúrka pohnúť a súradnice \textbf{kam} sa má figúrka pohnúť.
+Tento prístup je veľmi podobný prístupu číslo 2, rozdiel je iba vo výstu-pe siete. Namiesto toho, aby bol ťah zahrnutý v rozložení novej šachovnice, je výstupom explicitne daný ťah, t.j. súradnice políčka, \textbf{z} ktorého sa má figúrka pohnúť a súradnice \textbf{kam} sa má figúrka pohnúť.
 
 \mysmallsection{Výsledky}
 
-Problémom u všetkých typov prístupov bolo nájsť parametre siete tak, aby daný problém riešila. Skúšali sme mnoho kombinácii topológie siete a rýchlosti učenia, no vždy neúspešne. Pri prístupe 3, kedy funkčnosť siete vyzerala nádejne (nastavenie: 64, 128, 64, 16, 4), bol zase problém z výpočetného hľadiska. Odhad učenia bol asi tri dni a žiadny z nám prístupnych výpočetných serverov (Aisa, Aura) nepodporuje C++11 (Aisa zvláda iba C++0A.D. a Aura C++500BC). Preto sme nemali ako otestovať, či je sieť schopná sa tomuto prístupu naučiť. 
+Problémom u všetkých typov prístupov bolo nájsť parametre siete tak, aby daný problém riešila. Skúšali sme mnoho kombinácii topológie siete a rýchlosti učenia, no vždy neúspešne. Pri prístupe 3, kedy funkčnosť siete vyzerala nádejne (nastavenie: 64, 128, 64, 16, 4), bol zase problém z výpočetného hľadiska. Odhad učenia bol asi tri dni a nemali sme prostriedky ako otestovať, či je sieť schopná sa tomuto prístupu naučiť.
 
 Preto sme rozhodli riešiť pomocou neurónových sieti iný problém.
 
@@ -121,32 +125,34 @@ Majme vstupný polynóm:
 f(x)=5x^3 + 2x + 8
 \end{equation}
 
-Takýto polynóm bude v skutočnosti interpretovaný pre sieť nasledovne (uvažujme, že sieť je schopná načítavať polynómy stupňa maximálne 5):
+Takýto polynóm bude interpretovaný pre sieť nasledovne (uvažujme, že sieť je schopná načítavať polynómy stupňa maximálne 5):
 
 \begin{equation}
-f(x)=0x^5 + 0x^4 + 5x^3 + 0x^2 + 2x^1 + 8x^0
+f(x)=8x^0 + 2x^1 + 0x^2 + 5x^3 + 0x^4 + 0x^5
 \end{equation}
 
-\noindent takže finálnym vstupom pre sieť je sekvencia čísel "\textbf{0 0 5 0 2 8}".
+\noindent takže finálnym vstupom pre sieť je sekvencia čísel "\textbf{8 2 0 5 0 0}".
 
 Chceme dostať deriváciu tohto polynómu
 
 \begin{equation}
-f'(x)=15x^2 + 2
+f'(x)=2 + 15x^2
 \end{equation}
 
-\noindent čiže sekvenciu čísel "\textbf{0 0 15 0 2}", ktorá je o jednu číslicu kratšia.
+\noindent čiže sekvenciu čísel "\textbf{2 0 15 0 0}", ktorá je o jednu číslicu kratšia.
 
 {\vspace*{0.5cm}\centering\textbf{Zdroj dát}\\}
 
-Ako zdroj dát sme zvolili funkciu, ktorá vygeneruje náhodný polynón z daného rozsahu hodnôt (maximálny stupeň polynómu a rozsah koeficientov) a zároveň vypočíta jeho deriváciu. 
+Ako zdroj dát sme zvolili funkciu, ktorá vygeneruje náhodný polynóm z daného rozsahu hodnôt (maximálny stupeň polynómu a rozsah koeficientov) a zároveň vypočíta jeho deriváciu. 
 
 {\vspace*{0.5cm}\centering\textbf{Implementácia}\\}
 
-Implementácia čo sa siete týka sa nezmenila. Pribudla trieda Polynoms, ktorá pracuje s polynómami. Zásadnou je funkcia, ktorá generuje dáta pre sieť, t.j. dvojice vstup a výstup. Pre rozhranie to má dopad iba na volanie učenia:
+Implementácia čo sa siete týka sa nezmenila. Pribudla trieda Polynoms, ktorá pracuje s polynómami. Zásadnou je funkcia, ktorá generuje dáta pre sieť, t.j. dvojice vstup a výstup. Pre rozhranie to má dopad iba na~volanie učenia:
 
 \begin{itemize}
-\item \textbf{learn} - spustí učenie pomocou spätnej propagácie nad daným počtom vstupných polynómov a sieťou
+\item \textbf{learn} - spustí učenie pomocou spätnej propagácie nad daným
+
+\hspace{1.2cm} počtom vstupných polynómov a sieťou
 
 {\centering\small ./main learn 10000 my.net \\}
 
@@ -168,7 +174,7 @@ F_a(x)=x~,
 
 \mysmallsection{Výsledky}
 
-Prvým pokusom bolo realizovať derivovanie pomocou neurónovej siete na veľmi obmedzených polynómoch. Zvolili sme maximálny stupeň polynómu 3 a rozsah koeficientov ako [0, 3]. Topológiu siete sme zvolili "3~81~2". Problém bol v rýchlosti učenia, ktorú sme museli nastaviť na veľmi malú hodnotu, aby sa sieť správne učila -- 0.0001.
+Prvým pokusom bolo realizovať derivovanie pomocou neurónovej siete na veľmi obmedzených polynómoch. Zvolili sme maximálny stupeň polynómu 3 a rozsah koeficientov ako [0, 3]. Topológiu siete sme zvolili "3~81~2". Problém bol v rýchlosti učenia, ktorú sme museli nastaviť na~veľmi malú hodnotu, aby sa sieť správne učila -- 0.0001.
 
 Následne po dostatočnom učení (asi 20000 náhodne vygenerovaných polynómov) sme dosiahli pozitívne výsledky vo výstupoch siete. Tu je niekoľko príkladov:
 
@@ -187,7 +193,7 @@ Následne po dostatočnom učení (asi 20000 náhodne vygenerovaných polynómov
 	  \end{tabular}
 \end{itemize}
 
-Druhým výsledkom je iný prístup k učeniu. Namiesto toho, aby sme sieť učili konkrétne polynómy, dávali sme jej na vstup vždy iba jeden člen s nenulovým koeficientom. Tým sme chceli dosiahnuť \textit{nezávislosť} jednotlivých členov medzi sebou. Zvolili sme maximálny stupeň polynómu 4 a rozsah koeficientov ako [0, 10]. To znamená, že dokopy sme sieť učili iba sadou dát, kde sa vyskytovalo dokopy 55 roznych polynómov. Najprv sme zvolili topológiu siete "5~125~4", no postupne sme sa prepracovali až na minimálnu topológiu. Uvedomili sme si, že stačí sieť s topológiou "5~4":
+Druhým výsledkom je iný prístup k učeniu. Namiesto toho, aby sme sieť učili konkrétne polynómy, dávali sme jej na vstup vždy iba jeden člen s nenulovým koeficientom. Tým sme chceli dosiahnuť \textit{nezávislosť} jednotlivých členov medzi sebou. Zvolili sme maximálny stupeň polynómu 4 a~rozsah koeficientov ako [0, 10]. To znamená, že dokopy sme sieť učili iba sadou dát, kde sa vyskytovalo dokopy 55 rôznych polynómov. Zvolili sme minimálnu topológiu siete, čiže "5~4":
 
 \begin{center}
 \begin{tikzpicture}[shorten >=1pt,->,draw=black!50, node distance=\layersep]
@@ -197,17 +203,12 @@ Druhým výsledkom je iný prístup k učeniu. Namiesto toho, aby sme sieť uči
     \tikzstyle{output neuron}=[neuron, fill=red!50];
     \tikzstyle{annot} = [text width=4em, text centered]
 
-    % Draw the input layer nodes
     \foreach \name / \y in {1,...,5}
-    % This is the same as writing \foreach \name / \y in {1/1,2/2,3/3,4/4}
         \node[input neuron] (I-\name) at (-\y, 0) {};
 
 	\foreach \name / \y in {1,...,4}
-    % This is the same as writing \foreach \name / \y in {1/1,2/2,3/3,4/4}
         \node[output neuron] (H-\name) at (-\y, \layersep) {};
 
-    % Connect every node in the input layer with every node in the
-    % hidden layer.
     \foreach \source in {1,...,5}
         \foreach \dest in {1,...,4}
             \path (I-\source) edge (H-\dest);
@@ -216,8 +217,6 @@ Druhým výsledkom je iný prístup k učeniu. Namiesto toho, aby sme sieť uči
     \path (I-3) [red] edge node [red, right] {$2$} (H-3);
     \path (I-4) [red] edge node [red, right] {$1$} (H-4);
      
-
-    % Annotate the layers
     \node[annot,left of=I-5, node distance=2cm] (hl) {Input layer};
     \node[annot,above of=hl] {Output layer};
 \end{tikzpicture}
@@ -225,7 +224,7 @@ Druhým výsledkom je iný prístup k učeniu. Namiesto toho, aby sme sieť uči
 
 \noindent kde ostatné hrany majú váhu 0. 
 
-Preto sme sa pokúsili tento ideál dosiahnuť. Naša sieť si po učiacom pro učiacom procese nastavila na hranách takmer identické váhy, preto aj vracala celkom presné výsledky. Vďaka tomu sa naša sieť naučila pracovať s ľubovoľnými koeficientami bez toho, aby sme ju to museli explicitne učiť. Nemá problém ani s desatinnými a zápornými číslami. Príklady:
+Preto sme sa pokúsili tento ideál dosiahnuť. Naša sieť si po učiacom procese nastavila na hranách takmer identické váhy, preto aj vracala celkom presné výsledky. Vďaka tomu sa naša sieť naučila pracovať s ľubovoľ-nými koeficientmi bez toho, aby sme ju to museli explicitne učiť. Nemá problém ani s desatinnými a zápornými číslami. Príklady:
 
 \begin{itemize}
 \item \begin{tabular}{ l l }
