Added explicit distribution of project participation (kek)

--- a/report/report.tex
+++ b/report/report.tex
@@ -237,4 +237,14 @@ Preto sme sa pokúsili tento ideál dosiahnuť. Naša sieť si po učiacom proce
 	  \end{tabular}
 \end{itemize}
 
+\mysmallsection{Rozdelenie práce}
+
+\begin{itemize}
+\item Implementácia neurónovej siete $\rightarrow$ Adam Krupička
+
+\item Spracovanie vstupu, záverečná správa $\rightarrow$ Matej Troják
+
+\item Kreatívna činnosť a iné $\rightarrow$ spoločne
+\end{itemize}
+
 \end{document}
