--- a/presentation/prezi.tex
+++ b/presentation/prezi.tex
@@ -29,11 +29,11 @@
 \section{Problém šachového ťahu}
 
 \begin{frame}
-\frametitle{Zdroj dát} 
+\frametitle{Problém šachového ťahu} 
 \begin{center}
 \begin{minipage}{0.4\textwidth}
 \begin{center}
-\includegraphics[scale=0.25]{from}
+\includegraphics[scale=0.25]{to}
 \end{center}
 \end{minipage}%
 \begin{minipage}{0.1\textwidth}
@@ -43,12 +43,18 @@ $\longrightarrow$
 \end{minipage}
 \begin{minipage}{0.4\textwidth}
 \begin{center}
-\includegraphics[scale=0.25]{to}
+\includegraphics[scale=0.25]{from}
 \end{center}
 \end{minipage}
+\end{center} 
+\textbf{Zdroj dát}
+\begin{center}
 \begin{itemize}
-\item sme záznamy šachových partií z Games of World Champions
+\item záznamy šachových partií z Games of World Champions
 \item prevedené do formátu FEN (Forsyth–Edwards Notation)
+
+\fbox{\scriptsize rnbqk1nr/pppp1ppp/8/8/1bBpP3/8/PPP2PPP/RNBQK1NR w KQkq - 2 4}	
+
 \item cca. 2 milióny ťahov 
 \end{itemize}
 \end{center}
@@ -110,6 +116,7 @@ $F_a(x)=12 \times tanh(\frac{x}{12})$
 \section{Problém derivácie polynómu}
 
 \begin{frame}
+\frametitle{Problém derivácie polynómu}
 \begin{center}
 \hspace*{0.5cm}\begin{minipage}{\textwidth}
 \textbf{Zdroj dát}
@@ -181,6 +188,12 @@ $F_a(x)=12 \times tanh(\frac{x}{12})$
 		výstup: & $20.7582$~\arc~$23.0364x^1$~\arc~$60.6112x^2$~\arc~$-1999.19x^3$
 \end{tabular}
 
+\end{frame}
+
+\begin{frame}
+\begin{center}
+\Huge Ďakujeme za pozornosť
+\end{center}
 \end{frame}
 
 \end{document}
